<resources>
    <string name="app_name">MiPet</string>
    <string name="delete_user">Borrar Usuario</string>
    <string name="insert_user">Registrarse</string>
    <string name="insert_pet">Registrar mascota</string>
    <string name="user">Usuario</string>
    <string name="email">Email</string>
    <string name="pass">Contraseña</string>
    <string name="pass_user">Pass</string>
    <string name="enter">Entrar</string>
    <string name="datos_pet">Datos de la mascota</string>
    <string name="addPet">Añadir Mascota</string>
    <string name="name_pet">Nombre de la mascota</string>
    <string name="tipo_pet">Tipo</string>
    <string name="tipo_perro">Perro</string>
    <string name="tipo_gato">Gato</string>
    <string name="tipo_pez">Pez</string>
    <string name="tipo_pajaro">Pájaro</string>
    <string name="tipo_reptil">Réptil</string>
    <string name="tipo_pq_mamiferos">Otros mamíferos</string>
    <string name="errorUser">Contraseña o usuario incorrecto</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="error_field_required">nombre requerido</string>
    <string name="error_invalid_email">Error el email debe llevar "@"</string>
    <string name="error_invalid_password">Error la contraseña debe contener al menos 5 caracteres</string>
    <string name="cita">Citas</string>
    <string name="no_note">No hay mascotas registradas</string>
    <string name="add_cita">Añadir Cita</string>
    <string name="add_articulo">Añadir Artículo</string>
    <string name="hora">Hora</string>
    <string name="fecha">Fecha</string>
    <string name="horaP">Hora:</string>
    <string name="fechaP">Fecha:</string>
    <string name="clinica">Clinica veterinaria</string>
    <string name="clinicaP">Clinica veterinaria:</string>
    <string name="motivo_cita">Motivo de la cita</string>
    <string name="motivo_citaP">Motivo de la cita:</string>
    <string name="select_time">Selecciona la hora</string>
    <string name="new_notification">Tienes una cita hoy en el veterinario</string>
    <string name="forget_pass">Registrar contraseña</string>
    <string name="insert_article">Registrar articulo</string>
    <string name="name_articulo">Nombre del artículo</string>
    <string name="precio">Precio del articulo</string>
    <string name="periodo">Renovacion del articulo</string>
    <string name="hasta">Hasta la fecha</string>
    <string name="duracion">Duracion</string>
    <string name="name_articuloP">Nombre del artículo:</string>
    <string name="precioP">Precio del articulo:</string>
    <string name="periodoP">Renovacion del articulo:</string>
    <string name="hastaP">Hasta la fecha:</string>
    <string name="duracionP">Duracion:</string>
    <string name="politica">Politica de privacidad</string>
    <string name="acepta">Acepta los términos y condiciones de privacidad</string>
    <string name="acept_delete">Desea eliminar el usuario</string>
    <string name="delete_user_dialog">Borrar Usuario</string>
    <string name="delete_pet">Borrar mascota</string>
    <string name="acept_delete_pet">Desea eliminar la mascota</string>
    <string name="change">Olvidó su contraseña</string>
    <string name="forget_question">He olvidado la contraseña</string>
    <string name="acept_change_pass">Su contraseña será modoficada</string>
    <string name="insert_cita">Registrar cita</string>
    <string name="notification">Notificación</string>
    <string name="volver">Volver</string>


    <string name="condicion0">
        TÉRMINOS Y CONDICIONES DE USO APP
    </string>
    <string name="condicion1">
        1. Estos Términos y Condiciones de Uso regulan las reglas a que se sujeta la utilización de la APP
        Mipet (en adelante, Mipet), que puede descargarse desde el dominio
        PlayStore La descarga o utilización de la APP atribuye la condición de
        Usuario a quien lo haga e implica la aceptación de todas las condiciones incluidas en este documento
        y en la Política de Privacidad y el Aviso Legal de dicha página Web. El Usuario debería leer estas
        condiciones cada vez que utilice la APP, ya que podrían ser modificadas en lo sucesivo.
    </string>
    <string name="condicion2">
        2. Únicamente los Usuarios expresamente autorizados por Mipet podrán acceder a la
        descarga y uso de la APP. Los Usuarios que no dispongan de autorización, no podrán acceder a dicho
        contenido.
</string>
    <string name="condicion3">
        3. Cargos: eres responsable del pago de todos los costes o gastos en los que incurras como resultado de
        descargar la versión premium y usar la Aplicación de Mipet, incluido cualquier cargo de red de operador o
        itinerancia. Consulta con tu proveedor de servicios los detalles al respecto.
</string>
    <string name="condicion4">
        4. Estadísticas anónimas: Mipet se reserva el derecho a realizar un seguimiento de tu
        actividad en la Aplicación de y a informar de ello a nuestros proveedores de servicios estadísticos de
        terceros. Todo ello de forma anónima.
</string>
    <string name="condicion5">
        5. Protección de tu información personal: queremos ayudarte a llevar a cabo todos los pasos necesarios
        para proteger tu privacidad e información. Consulta la Política de privacidad de Mipet y los
        avisos sobre privacidad de la Aplicación para conocer qué tipo de información recopilamos y las
        medidas que tomamos para proteger tu información personal.
</string>
    <string name="condicion6">
        6. Queda prohibido alterar o modificar ninguna parte de la APP a de los contenidas de la misma, eludir,
        desactivar o manipular de cualquier otra forma (o tratar de eludir, desactivar o manipular) las
        funciones de seguridad u otras funciones del programa y utilizar la APP o sus contenidos para un fin
        comercial o publicitario. Queda prohibido el uso de la APP con la finalidad de lesionar bienes,
        derechos o intereses de Mipet o de terceros. Queda igualmente prohibido realizar
        cualquier otro uso que altere, dañe o inutilice las redes, servidores, equipos, productos y programas
        informáticos de Mipet o de terceros.
</string>
    <string name="condicion7">
        7. La APP y sus contenidos (textos,  gráficos, imágenes, tecnología, software,
        contenidos, diseño gráfico, código fuente, etc.), así como las marcas y demás signos distintivos son
        propiedad de Mipet o de terceros, no adquiriendo el Usuario ningún derecho sobre ellos
        por el mero uso de la APP. El Usuario, deberá abstenerse de:
 </string>
    <string name="condicion7a">
        a) Reproducir, copiar, distribuir, poner a disposición de terceros, comunicar públicamente,
        transformar o modificar la APP o sus contenidos, salvo en los casos contemplados en la ley o
        expresamente autorizados por Mipet o por el titular de dichos derechos.
</string>
    <string name="condicion7b">
        b) Reproducir o copiar para uso privado la APP o sus contenidos, así como comunicarlos
        públicamente o ponerlos a disposición de terceros cuando ello conlleve su reproducción.
</string>
    <string name="condicion7c">
        c) Extraer o reutilizar todo o parte sustancial de los contenidos integrantes de la APP.
    </string>
    <string name="title_activity_user_login">UserLogin</string>
    <string name="acept_change">Olvidó su contraseña</string>
    <string name="email_no">El email proporcionado no está registrado</string>
    <string name="no_condiciones">Si no acepta las condiciones, no podrá darse de alta en la aplicación</string>
    <string name="condiciones">Consultar condicoines</string>
    <string name="ya_registrado">El email proporcionado ya está registrado</string>
    <string name="pass_update">La contraseña ha sido modificada</string>
    <string name="borrar_usuario">El usuario ha sido borrado</string>
    <string name="cancelar_borrar">Borrado cancelado</string>
    <string name="mascota_registrada">Mascota registrada</string>
    <string name="falta_campos">Rellene totos los campos</string>
    <string name="articulo_registrado">Artículo registrado</string>
    <string name="articulo_ya_existe">Ya tiene registrado ese artículo</string>
    <string name="cita_registrada">Cita registrada</string>
    <string name="fecha_hora_sin_datos">Campos de fecha/ hora sin datos</string>
    <string name="fecha_pasada">La fecha seleccionada ya ha pasado</string>
    <string name="cita_existe">La cita ya está registrada</string>
    <string name="cita_pasada">La cita ya ha pasado</string>
    <string name="no_corresponde"> La hora seleccionada ya ha pasado o no se corresponde con la cita</string>
    <string name="notificacon_si">Notificación activada</string>


</resources>