<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado_login"
    android:orientation="vertical">

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <ImageView
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/degradado_claro"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="335dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/border"
                android:src="@drawable/email" />


            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/border"
                android:fontFamily="@font/kanit"
                android:hint="@string/email" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="335dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/border"
                android:src="@drawable/pass" />

            <LinearLayout
                android:layout_width="290dp"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/user_pass"
                    android:layout_width="245dp"
                    android:layout_height="45dp"
                    android:background="@drawable/border"
                    android:fontFamily="@font/kanit"
                    android:hint="@string/pass_user"
                    android:inputType="textPassword"/>

                <ImageButton
                    android:id="@+id/ver_pass"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/border"
                    android:onClick="onClickVerPass"
                    android:src="@drawable/ojo" />

            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/forget_pass"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/forget_question"
            android:fontFamily="@font/kanit_light"
            android:textColor="@color/black"
            android:layout_marginLeft="140dp"
            android:textSize="15dp"
            android:textAllCaps="false"/>



        <Button
            android:id="@+id/btn_forget_pass"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/color1"
            android:onClick="onClickForget"
            android:text="@string/forget_pass"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_volver"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/color1"
            android:onClick="onClickVolver"
            android:text="@string/volver"
            android:visibility="gone" />

        <Button
            android:id="@+id/insert"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/color1"
            android:text="@string/insert_user"
            android:visibility="invisible" />

        <Button
            android:id="@+id/entrar"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/color1"
            android:text="@string/enter"
            android:visibility="invisible" />
    </LinearLayout>


</LinearLayout>