<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".app.activities.RegistroCitas">

    <ImageButton
        android:id="@+id/btn_clear_cita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="345dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="2dp"
        android:background="@color/white"
        android:src="@drawable/limpiar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/kanit"
        android:text="@string/clinica" />


    <EditText
        android:id="@+id/nombre_clinica"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border"
        android:fontFamily="@font/kanit_light"/>


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/kanit"
        android:text="@string/fecha" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fecha_cita"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/border" />

        <ImageButton
            android:id="@+id/btn_date"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/calendar"
            android:background="@color/white"/>


    </LinearLayout>


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/kanit"
        android:text="@string/hora" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/hora_cita"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/border" />

        <ImageButton
            android:id="@+id/btn_time"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/clock"
            android:background="@color/white"/>


    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/kanit"
        android:text="@string/motivo_cita"/>

    <EditText
        android:id="@+id/motivo_cita"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border"
        android:fontFamily="@font/kanit_light"/>


    <Button
        android:id="@+id/btn_reg_cita"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/border"
        android:text="@string/insert_cita" />

</LinearLayout>