<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <ImageButton
        android:id="@+id/btn_clear_pet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="345dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="2dp"
        android:background="@color/white"
        android:src="@drawable/limpiar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">




        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/name_pet"
            android:textSize="17dp"
            android:fontFamily="@font/kanit"/>

        <EditText
            android:id="@+id/petName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/border"
            android:fontFamily="@font/kanit_light"/>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:textSize="17dp"
            android:text="@string/tipo_pet"
            android:fontFamily="@font/kanit"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp">



            <Spinner
                android:id="@+id/spiner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:background="@drawable/degradado_claro" />
        </LinearLayout>
        <Button
            android:id="@+id/insertPet"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/border"
            android:onClick="regPet"
            android:text="@string/insert_pet" />



    </LinearLayout>

</LinearLayout>

