<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="355dp"
    android:layout_height="220dp"
    android:layout_marginStart="30dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    android:background="@drawable/degradado_claro"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:background="@color/color1"
        android:orientation="vertical">

    </LinearLayout>

    <ImageView
        android:id="@+id/eliminar_articulo"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="310dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/papelera" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:textSize="17dp"
            android:text="@string/name_articuloP"
            android:fontFamily="@font/kanit"/>

        <TextView
            android:id="@+id/nombre_articulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/kanit_italic"
            android:textSize="17dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/kanit"
            android:text="@string/precioP"
            android:textSize="17dp"/>

        <TextView
            android:id="@+id/pvp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/kanit_italic"
            android:textSize="17dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/kanit"
            android:text="@string/hastaP"
            android:textSize="17dp"/>

        <TextView
            android:id="@+id/fecha_renovacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/kanit_italic"
            android:textSize="17dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="130dp"
            android:fontFamily="@font/kanit"
            android:text="@string/duracionP"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/duracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/kanit_italic"
            android:text="Hols"
            android:textSize="17dp" />
    </LinearLayout>





</RelativeLayout>